Add new features

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,12 +9,13 @@ body {
 }
 .custom-h1-title {
     text-align: center;
+    padding-bottom: 20px;
 }
 .content {
     margin-top: 20px;
 }
 .custom-table {
-    margin-top: 10px;
+    height: 435px;
 }
 .custom-select{
     width: 100%;
@@ -32,7 +33,7 @@ body {
     padding-bottom: 5px;
 }
 .vs__clear{
-    margin-top: -5px;
+    margin-top: -4px;
 }
 .router-link-active {
     color:#fff !important;
@@ -40,7 +41,45 @@ body {
 .modal{
     pointer-events: none;
 }
-
 .modal-dialog{
     pointer-events: all;
- }
+}
+.row-buttons {
+    padding-bottom: 20px;
+}
+#filter_assigned_users {
+    min-width: 203px;
+}
+#filter_assigned_users .vs__dropdown-toggle {
+    height: 37.5px;
+    margin-right: 3px;
+}
+.dropdown-item {
+    text-align: right;
+}
+.invalid-feedback {
+    color:#ff0000;
+}
+.btn-left {
+    margin-right: 3px;
+}
+.add-task-notification, .update-task-notification {
+    font-size: 13px;
+    padding: 10px;
+    margin-top: 61px;
+    margin-right: 15px;
+    margin-left: 5.5px;
+    color: #fff;
+    background-color: #5a7fbf !important;
+    border-left: 5px solid #324f81 !important;
+}
+.delete-task-notification {
+    font-size: 13px;
+    padding: 10px;
+    margin-top: 61px;
+    margin-right: 15px;
+    margin-left: 5.5px;
+    color: #fff;
+    background: #e54d42 !important;
+    border-left: 5px solid #b82e24 !important;
+}
