--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -14,9 +14,6 @@ body {
 .content {
     margin-top: 20px;
 }
-.custom-table {
-    height: 435px;
-}
 .custom-select{
     width: 100%;
 }
@@ -24,9 +21,6 @@ body {
     color:#ff0000;
     padding-bottom: 5px;
     padding-top: 5px;
-}
-.content-height {
-    height: 800px;
 }
 .invalid-feedback {
     display:block;
@@ -88,7 +82,7 @@ body {
 }
 
 .custom-container {
-    height: 470px;
+    min-height: 470px;
 }
 html {
     font-size: 16px !important;
