--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -87,10 +87,10 @@ body {
 html {
     font-size: 16px !important;
     }
-.spinner-text {
-    padding-top: 1.5px;
-}
-.spinner {
-    padding-top: 1.5px;
-    padding-left: 5px;
-}
+/* .spinner-text {
+    margin-top: 3.5px;
+} */
+/* .spinner {
+    margin-top: 1.5px;
+    margin-left: 5px;
+} */
