--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -87,10 +87,11 @@ body {
 html {
     font-size: 16px !important;
     }
-/* .spinner-text {
+.spinner-text {
     margin-top: 3.5px;
-} */
-/* .spinner {
-    margin-top: 1.5px;
+    line-height: 2;
+}
+.spinner {
+    line-height: 2;
     margin-left: 5px;
-} */
+}
