--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -88,10 +88,9 @@ html {
     font-size: 16px !important;
     }
 .spinner-text {
-    margin-top: 3.5px;
-    line-height: 2;
+    margin-top: 1.7px;
 }
 .spinner {
-    line-height: 2;
-    margin-left: 5px;
+    padding-top: 1.7px;
+    padding-left: 5px;
 }
