--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -79,6 +79,7 @@ body {
 }
 #file_csv {
     width: 250px; 
+    line-height: 1 !important;
 }
 
 .custom-container {
@@ -87,10 +88,3 @@ body {
 html {
     font-size: 16px !important;
     }
-.spinner-text {
-    margin-top: 1.7px;
-}
-.spinner {
-    padding-top: 1.7px;
-    padding-left: 5px;
-}
