--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,6 @@
 body {
     font-size: 1.02rem;
+    background-color:  #e1e6ea;
 }
 .custom-container {
     margin-top:20px;
@@ -9,7 +10,8 @@ body {
 }
 .custom-h1-title {
     text-align: left;
-    padding-bottom: 20px;
+    margin-bottom: 0.1rem;
+    font-size: 32px;
 }
 .content {
     margin-top: 20px;
@@ -62,20 +64,22 @@ body {
 }
 .add-task-notification, .update-task-notification {
     font-size: 13px;
-    padding: 10px;
-    margin-top: 61px;
-    margin-right: 15px;
+    padding: 9px;
+    margin-top: 68.7px;
+    margin-right: 16px;
     margin-left: 5.5px;
+    border-radius: 2.5px;
     color: #fff;
     background-color: #5a7fbf !important;
     border-left: 5px solid #324f81 !important;
 }
 .delete-task-notification {
     font-size: 13px;
-    padding: 10px;
-    margin-top: 61px;
-    margin-right: 15px;
+    padding: 9px;
+    margin-top: 68.7px;
+    margin-right: 16px;
     margin-left: 5.5px;
+    border-radius: 2.5px;
     color: #fff;
     background: #e54d42 !important;
     border-left: 5px solid #b82e24 !important;
@@ -98,4 +102,11 @@ html {
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
+}
+/* .card-header {
+
+} */
+.navbar {
+    font-size: 17.5px;
+    border-radius: 2.5px;
 }
