--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,9 +2,6 @@ body {
     font-size: 1.02rem;
     background-color: #f2f3f7;
 }
-.custom-container {
-    margin-top:20px;
-}
 .custom-h3 {
     padding-top: 10px;
 }
@@ -16,8 +13,12 @@ body {
 .content {
     margin-top: 20px;
 }
-.content-height {
+.custom-container {
     height: 800px;
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
 }
 .custom-select{
     width: 100%;
@@ -92,7 +93,8 @@ body {
     line-height: 1 !important;
 }
 
-.custom-container {
+.custom-table {
+    margin-top: 20px;
     min-height: 470px;
 }
 html {
@@ -140,4 +142,43 @@ thead {
 .modal-open {
     overflow: visible;
     padding-right: 0px !important;
+}
+.custom-card-body {
+    padding-top: 1.25rem;
+    padding-right: 1.25rem;
+    padding-bottom: 1.25rem;
+}
+.default-message {
+    padding-left: 0px;
+}
+.custom-content{
+    padding-top: 5px;
+}
+.p-doughnut {
+    font-size:20px; 
+    color:#212529;
+    padding-left:60px; 
+    padding-top:8px;
+}
+
+@media only screen and (max-width: 600px) {
+    .p-doughnut-sm {
+        font-size:20px; 
+        color:#212529;
+        padding-left:0px; 
+        padding-top:8px;
+    }
+    .custom-add-task-sm {
+        padding-bottom: 5px;
+    }
+
+    #filter_assigned_users {
+        min-width: 205px;
+}
+    .custom-table-sm {
+        display: block;
+        overflow-x:auto;
+        width: 700px;
+        padding-left: 3px;
+    }
 }
